# erbgdb

./: .gitignore  Dockerfile  Procfile  README.md  README_INIT.md  pyproject.toml  render.yaml  requirements.txt
app/: index.py  main.py
app/data/: __init__.py  players.json
app/fantasy/: admin.py  match_processor.py  player_history.py  points.py  scorecard.py
app/scrapers/: cache.py  cricbuzz.py  cricket_api_scraper.py  international_api.py  ipl_api.py
app/templates/: admin.html  docs.html
