[project]
name = "app"
version = "0.1.0"
description = "Free, unlimited, self-hosted JSON API for IPL 2026 data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "jinja2>=3.1.6",
    "pytz>=2024.1",
]

[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.135.1"}
httpx = "^0.28.1"
beautifulsoup4 = "^4.14.3"
lxml = "^6.0.2"
jinja2 = "^3.1.6"
pytz = ">=2024.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
